--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,40 @@
+name: Build and deploy
 on:
   push:
-    branches:
-      - master
-name: 🚀 Deploy website on push
+    branches: [main]
+  workflow_dispatch:
+
 jobs:
-  web-deploy:
-    name: 🎉 Deploy
+  build:
+    name: Build ⛏
     runs-on: ubuntu-latest
-
     steps:
-      - name: 🚚 Get latest code
-        uses: actions/checkout@v2
-
-      - name: Use Node.js 12
-        uses: actions/setup-node@v2-beta
+      - name: Checkout repository
+        uses: actions/checkout@main
+      - name: Install dependencies
+        run: npm ci
+      - name: Build dependencies
+        run: npm run build
+      - name: Archive production artifact
+        uses: actions/upload-artifact@main
         with:
-          node-version: "16.18.0"
-
-      - name: 🔨 Build Project
-        run: |
-          npm install
-          npm run build
-      - name: 📂 Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.1.0
-        with:
+          name: dist
+          path: dist
+  deploy:
+    name: Deploy 🚀
+    needs: build
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Checkout repository
+        uses: actions/checkout@main
+      - name: Download artifact
+        uses: actions/download-artifact@main
+        with: 
+          name: dist
+          path: dist
+      - name: Sync files to hosting
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        with: 
           server: ftp.kaurswebsite.com
           username: kaurswebsite@kaurswebsite.com
-          password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./dist/
+          password: ${{ secrets.ftp_password }}
