--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
           server: ftp.kaurswebsite.com
-          username: kaurswebsite@kaurswebsite.com
-          password: kaurswebsite@1994
+          username: kaurswebnew@kaurswebsite.com
+          password: kaurswebnew@1994
           local-dir: ./build/
           
